2011-05-09  Miloslav Trmač  <mitr@redhat.com>

	* src/utils.py (get_daemon_options): Add --internal-log-dir.
	* src/server.py (main)
	* src/bridge.py (main): Reflect --internal-log-dir, overriding
	settings.log_dir.

2011-05-06  Miloslav Trmač  <mitr@redhat.com>

	* src/server.py (request_handling_child): Log errors when opening the
	database instead of silently discarding them.

	* src/client.py (SignRPMsReplyThread._real_run): Immediately report
	successful subrequests in verbose mode.

	* src/bridge.py (bridge_one_request): Log more information on NSPRError.

2011-02-01  Miloslav Trmač  <mitr@redhat.com>

	* README: Add numerical identifiers to command sequences to disambiguate
	"see above" references.

2010-06-12  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Define PACKAGE_URL.

2010-05-27  Miloslav Trmač  <mitr@redhat.com>

	* src/double_tls.py (_CombiningBuffer.__init__)
	(_InnerBridgingBuffer.__init__): New member __buffer_dropped.
	(_SplittingBuffer.__init__): New members __inner_buffer_dropped and
	__outer_buffer_dropped.
	(_CombiningBuffer._handle_errors, _SplittingBuffer._handle_errors)
	(_InnerBridgingBuffer._handle_errors): Don't flood the logs with "data
	dropped" messages.

	* src/double_tls.py (_id): Handle more than 26 objects (more than (255
	- ord('A')) to be precise).

2010-05-25  Miloslav Trmač  <mitr@redhat.com>

	* src/server.py (ServerConfiguration._add_defaults): New option
	signing-timeout.
	(ServerConfiguration._read_configuration): Handle signing-timeout.
	(SigningContext.sign_rpm): Catch pexpect exceptions.  Use
	signing-timeout.  New parameter config.  All callers changed.
	(SignRPMsSignerThread.__init__): New parameter config.  Caller changed.
	* config/server.conf (bridge-hostname): Document signing-timeout.

	* src/utils.py (_derivation_counter_1): New definition.
	(derived_key): New function.
	(SHA512HashAndHMACReader, WorkerThread): New classes.
	(run_worker_threads, log_exception): New functions.