@@ -1505,11 +1505,10 @@ def request_handling_child(config):
 def main():
     options = utils.get_daemon_options('A signing server',
                                        '~/.sigul/server.conf')
-    d = {}
-    if options.log_dir is not None:
-        d['filename'] = os.path.join(options.log_dir, 'sigul_server.log')
     logging.basicConfig(format='%(asctime)s %(levelname)s: %(message)s',
-                        level=utils.logging_level_from_options(options), **d)
+                        level=utils.logging_level_from_options(options),
+                        filename=os.path.join(options.log_dir,
+                                              'sigul_server.log'))
     try:
         config = ServerConfiguration(options.config_file)
     except utils.ConfigurationError, e:
